agregue la imagen home banner

--- a/views/home.html
+++ b/views/home.html
@@ -35,6 +35,8 @@
             </ul>
         </nav>
 
+        <img src="/images/img-home-banner.jpg" alt="imagen banner">
+
         </section>
     </header>
 
