agregue estilos a la estructura HTML

--- a/views/home.html
+++ b/views/home.html
@@ -8,123 +8,148 @@
       src="https://kit.fontawesome.com/8ca0d39b16.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <header>
         <section>
-            <img src="/images/logo-mercado-liebre.svg" alt="logo">
-            <h2>
-                Lugar para poner barra de búsqueda
-            </h2>
+            <img src="/images/logo-mercado-liebre.svg" width="100%" alt="logo">
+            <form action="" class="buscador">
+                <input type="text" placeholder="Buscar" id="search">
+                <article class="lupa">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </article>
+            </form>
+        </section>
+    
+
               
+        <section class="slogan">
             <h2>
-                Comprá  en cuotas y sin tarjeta de crédito
-            </h2>
-            <nav>
+                <i class="fa-solid fa-hand-holding-dollar" style="color: #000000;"></i>   Comprá  en cuotas y sin tarjeta de crédito
+            </h2> 
+        </section>
+            <nav class="secciones">
             <ul>
-                <li><a href="">Ofertas</a></li>
-                <li><a href="">Tiendas Oficiales</a></li>
-                <li><a href="">Vender</a></li>
-                <li><a href="">Ayuda</a></li>
+                <li><a href="" class="link">Ofertas</a></li>
+                <li><a href="" class="link">Tiendas Oficiales</a></li>
+                <li><a href="" class="link">Vender</a></li>
+                <li><a href="" class="link">Ayuda</a></li>
             </ul>
-
+<section class="segundonav">
             <ul>
-                <li><a href="">Creá tu cuenta</a></li>
-                <li><a href="">Ingresá</a></li>
-                <li><a href="">Mis compras</a></li>
+                <li><a href="" class="link">Creá tu cuenta</a> <i class="fa-sharp fa-regular fa-id-card" style="color: #000000;"></i></li>
+                <li><a href="" class="link">Ingresá</a> <i class="fa-sharp fa-solid fa-right-to-bracket" style="color: #000000;"></i></li>
+                <li><a href="" class="link">Mis compras</a> <i class="fa-solid fa-basket-shopping" style="color: #000000;"></i></li>
             </ul>
+        </section>
         </nav>
-
-        <img src="/images/img-home-banner.jpg" alt="imagen banner">
-
+        </section>
+        <section class="burger-menu">
+            <i class="fas fa-bars"> </i>
         </section>
     </header>
+    <section>
+        <img src="/images/img-home-banner.jpg" width="100%" alt="imagen banner">
+    </section>
 
     <main>
         <section>
-            <h1>Basado en tu última vista</h1>
+            <h1 class="titulos">Basado en tu última vista</h1>
             <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="imagen de cafetera">
-                <h4>$6.770</h4>
-                <h4>40% OFF</h4>
-                <h3>Cafetera Moulinex</h3>
+                <img src="/images/img-cafetera-moulinex.jpg" width="100%" alt="imagen de cafetera">
+                <h4 class="precios">$6.770</h4>
+                <h4 class="desc">40% OFF</h4>
+                <h3 class="desc">Cafetera Moulinex</h3>
              </article>
 
            <article>
-            <img src="/images/img-macbook-pro-2019.jpg" alt="imagen de MacBook">
-            <h4>$230.000</h4>
-            <h4>20% off</h4>
-            <h3>MacBook Pro 2019</h3>
+            <img src="/images/img-macbook-pro-2019.jpg" width="100%" alt="imagen de MacBook">
+            <h4 class="precios">$230.000</h4>
+            <h4 class="desc">20% off</h4>
+            <h3 class="desc">MacBook Pro 2019</h3>
         </article>
 
            <article>
-            <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy s10">
+            <img src="/images/img-samsung-galaxy-s10.jpg" width="100%" alt="imagen de Samsung Galaxy s10">
 
-            <h4>$70.500</h4>
-            <h4>10% off</h4>
-            <h3>Samsung Galaxy S10</h3>
+            <h4 class="precios">$70.500</h4>
+            <h4 class="desc">10% off</h4>
+            <h3 class="desc">Samsung Galaxy S10</h3>
                 </article>
 
            <article>
-            <img src="/images/img-tv-samsung-smart.jpg" alt="imagen de smart tv">
+            <img src="/images/img-tv-samsung-smart.jpg" width="100%" alt="imagen de smart tv">
 
-            <h4>$23.200</h4>
-              <h4>5% off</h4> 
-              <h3>SmarTv Samsung 43"</h3>  
+            <h4 class="precios">$23.200</h4>
+              <h4 class="desc">5% off</h4> 
+              <h3 class="desc">SmarTv Samsung 43"</h3>  
             
            </article>
         </section>
 
         <section>
-            <h1>Sección de Ofertas</h1>
+            <h1 class="titulos">Sección de Ofertas</h1>
             <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="imagen de cafetera">
-                <h4>$6.770</h4>
-                <h4>40% OFF</h4>
-                <h3>Cafetera Moulinex</h3>
+                <img src="/images/img-cafetera-moulinex.jpg" width="100%" alt="imagen de cafetera">
+                <h4 class="precios">$6.770</h4>
+                <h4 class="desc">40% OFF</h4>
+                <h3 class="desc">Cafetera Moulinex</h3>
             </article>
 
            <article>
-            <img src="/images/img-macbook-pro-2019.jpg" alt="imagen de MacBook">
-            <h4>$230.000</h4>
-            <h4>20% off</h4>
-            <h3>MacBook Pro 2019</h3>
+            <img src="/images/img-macbook-pro-2019.jpg" width="100%" alt="imagen de MacBook">
+            <h4 class="precios">$230.000</h4>
+            <h4 class="desc">20% off</h4>
+            <h3 class="desc">MacBook Pro 2019</h3>
                 </article>
 
            <article>
-            <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen de Samsung Galaxy s10">
+            <img src="/images/img-samsung-galaxy-s10.jpg" width="100%" alt="imagen de Samsung Galaxy s10">
 
-            <h4>$70.500</h4>
-            <h4>10% off</h4>
-            <h3>Samsung Galaxy S10</h3>
+            <h4 class="precios">$70.500</h4>
+            <h4 class="desc">10% off</h4>
+            <h3 class="desc">Samsung Galaxy S10</h3>
            </article>
 
            <article>
-            <img src="/images/img-tv-samsung-smart.jpg" alt="imagen de smart tv">
+            <img src="/images/img-tv-samsung-smart.jpg" width="100%" alt="imagen de smart tv">
 
-            <h4>$23.200</h4>
-              <h4>5% off</h4> 
-              <h3>SmarTv Samsung 43"</h3>  
+            <h4 class="precios">$23.200</h4>
+              <h4 class="desc">5% off</h4> 
+              <h3 class="desc">SmarTv Samsung 43"</h3>  
            </article>
 
         </section>
     </main>
 
     <footer>
-        <section>
-     <h3>Pagá con tarjeta o en efectivo</h3>
-     <h4>Con Mercado Liebre Cash, tenés cuotas sin <br> interés con tarjeta o efectivo en puntos de <br> pago. ¡Y siempre es seguro!</h4>
+        <section class="secciones_footer">
+            <article>
+            <i  class="fa-solid fa-credit-card fa-2em"></i>
+        </article>
+
+     <h3 class="footer_titulos">Pagá con tarjeta o en efectivo</h3>
+     <h4 class="footer_descripciones">Con Mercado Liebre Cash, tenés cuotas sin <br> interés con tarjeta o efectivo en puntos de <br> pago. ¡Y siempre es seguro!</h4>
+    </section>
+    <section class="secciones_footer">
+    <article>
+            <i class="fa-solid fa-gift fa-2em"></i>
+        </article>
+        <h3 class="footer_titulos">Envíos gratis desde los $2.500</h3>
+        <h4 class="footer_descripciones">Solo por estar registrado en Mercado Liebre <br> Tenés envíos gratis en miles de productos. Es <br> un beneficio de Mercado Puntos.</h4>
+    
+    </section>
+    <section class="secciones_footer">
+   <article>
+            <i class="fa-solid fa-user-shield fa-2em"></i>
+        </article>
+        <h3 class="footer_titulos">Seguridad de principio a fin</h3>
+        <h4 class="footer_descripciones">¿No te gusta? ¡Devolvelo! En MercadoLiebre <br> no hay nada que no puedas hacer por que estás <br> siempre protegid@</h4>
     </section>
     <section>
-        <h3>Envíos gratis desde los $2.500</h3>
-        <h4>Solo por estar registrado en Mercado Liebre <br> Tenés envíos gratis en miles de productos. Es <br> un beneficio de Mercado Puntos.</h4>
-    </section>
-    <section>
-        <h3>Seguridad de principio a fin</h3>
-        <h4>¿No te gusta? ¡Devolvelo! En MercadoLiebre <br> no hay nada que no puedas hacer por que estás <br> siempre protegid@</h4>
-    </section>
-    <section>
-        <h4>Copyrigth <i class="fa-regular fa-copyright"></i> 1999-2020 MercadoLiebre S.R.L</h4>
+        <h4 class="footer_copy">Copyrigth © 1999-2020 MercadoLiebre S.R.L</h4>
     </section>
     </footer>
 
