cambie el tamaño de las letras de los articulos del footer

--- a/views/home.html
+++ b/views/home.html
@@ -138,7 +138,7 @@
             <i class="fa-solid fa-gift fa-2em"></i>
         </article>
         <h3 class="footer_titulos">Envíos gratis desde los $2.500</h3>
-        <h4 class="footer_descripciones">Solo por estar registrado en Mercado Liebre <br> Tenés envíos gratis en miles de productos. Es <br> un beneficio de Mercado Puntos.</h4>
+        <h4 class="footer_descripciones">Solo por estar registrad@ en Mercado Liebre <br> Tenés envíos gratis en miles de productos. Es <br> un beneficio de Mercado Puntos.</h4>
     
     </section>
     <section class="secciones_footer">
