--- a/views/home.html
+++ b/views/home.html
@@ -141,6 +141,9 @@
         <h4 class="footer_descripciones">Solo por estar registrad@ en Mercado Liebre <br> Tenés envíos gratis en miles de productos. Es <br> un beneficio de Mercado Puntos.</h4>
     
     </section>
+    <div class="caja">
+
+    </div>
     <section class="secciones_footer">
    <article>
             <i class="fa-solid fa-user-shield fa-2em"></i>
