--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5,6 +5,7 @@ main{
 
 .titulos{
     font-size: 24px;
+    margin-bottom: 10px;
 }
 
 .precios{
@@ -14,4 +15,17 @@ main{
 
 .desc{
     font-size: 16px;
+}
+
+main section article{
+    background-color: white;
+}
+
+main{
+    padding: 6px;
+    margin: 1%
+}
+
+main article{
+    margin-bottom: 20px;
 }
