--- a/views/home.html
+++ b/views/home.html
@@ -50,11 +50,13 @@
             <i class="fas fa-bars"> </i>
         </section>
     </header>
-    <section>
-        <img src="/images/img-home-banner.jpg" width="100%" alt="imagen banner">
-    </section>
+
+        <section class="banner">
+            <img src="/images/img-home-banner.jpg" width="100%" alt="imagen banner">
+        </section>
 
     <main>
+
         <section>
             <h1 class="titulos">Basado en tu última vista</h1>
             <article>
