--- a/views/home.html
+++ b/views/home.html
@@ -12,49 +12,59 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <header>
-        <section>
-            <img src="/images/logo-mercado-liebre.svg" width="100%" alt="logo">
+    <header class="main-header">
+        <section class="main-header-top-bar">
+            <img src="/images/logo-mercado-liebre.svg" width="100%" class="logo">
+
+        </section>
+            <section>
             <form action="" class="buscador">
                 <input type="text" placeholder="Buscar" id="search">
                 <article class="lupa">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </article>
             </form>
-        </section>
-    
-
-              
-        <section class="slogan">
-            <h2>
-                <i class="fa-solid fa-hand-holding-dollar" style="color: #000000;"></i>   Comprá  en cuotas y sin tarjeta de crédito
+            <h2 class="slogan">
+                <i class="fa-solid fa-hand-holding-dollar" style="color: #000000;"></i>
+               Comprá  en cuotas y sin tarjeta de crédito
             </h2> 
+
+       
         </section>
-            <nav class="secciones">
-            <ul>
+
+
+            <nav class="main-navbar">
+            <ul class="secciones">
                 <li><a href="" class="link">Ofertas</a></li>
                 <li><a href="" class="link">Tiendas Oficiales</a></li>
                 <li><a href="" class="link">Vender</a></li>
                 <li><a href="" class="link">Ayuda</a></li>
             </ul>
-<section class="segundonav">
-            <ul>
+
+            <ul class="segundonav">
                 <li><a href="" class="link">Creá tu cuenta</a> <i class="fa-sharp fa-regular fa-id-card" style="color: #000000;"></i></li>
                 <li><a href="" class="link">Ingresá</a> <i class="fa-sharp fa-solid fa-right-to-bracket" style="color: #000000;"></i></li>
                 <li><a href="" class="link">Mis compras</a> <i class="fa-solid fa-basket-shopping" style="color: #000000;"></i></li>
             </ul>
-        </section>
+    
         </nav>
+
+
         </section>
-        <section class="burger-menu">
+
+        <div class="caja-burger">
+           
+            <a href="#" class="burger-menu"></a>
             <i class="fas fa-bars"> </i>
-        </section>
-    </header>
+            
+        </div>
 
         <section class="banner">
             <img src="/images/img-home-banner.jpg" width="100%" alt="imagen banner">
         </section>
-
+    
+    </header>
+  <div class="espacio"></div>
     <main>
 
         <section>
