--- a/public/css/general.css
+++ b/public/css/general.css
@@ -15,10 +15,15 @@
     text-decoration: none;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 
 
 a{
     color: black;
-    font-size: 14px;
+    font-size: 16px;
+}
+
+body{
+    font-family: 'Roboto';
 }
