--- a/views/home.html
+++ b/views/home.html
@@ -19,12 +19,12 @@
         </section>
             <section>
             <form action="" class="buscador">
-                <input type="text" placeholder="Buscar" id="search">
+                <input type="text" placeholder="Buscar productos, marcas" id="search">
                 <article class="lupa">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </article>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </article>
             </form>
-            <h2 class="slogan">
+            <h2 class="copy-header">
                 <i class="fa-solid fa-hand-holding-dollar" style="color: #000000;"></i>
                Comprá  en cuotas y sin tarjeta de crédito
             </h2> 
@@ -64,40 +64,58 @@
         </section>
     
     </header>
-  <div class="espacio"></div>
+ 
     <main>
 
         <section>
             <h1 class="titulos">Basado en tu última vista</h1>
             <article>
                 <img src="/images/img-cafetera-moulinex.jpg" width="100%" alt="imagen de cafetera">
+                <section class="caja-descripcion">
+                <div class="circulo">
+                    <i class="fa-solid fa-truck"></i>
+                </div>
+                
                 <h4 class="precios">$6.770</h4>
                 <h4 class="desc">40% OFF</h4>
-                <h3 class="desc">Cafetera Moulinex</h3>
+                <h3 class="nombre-producto">Cafetera Moulinex</h3>
+            </section>
              </article>
-
+            
            <article>
             <img src="/images/img-macbook-pro-2019.jpg" width="100%" alt="imagen de MacBook">
+            <section class="caja-descripcion">
+            <div class="circulo">
+                <i class="fa-solid fa-truck"></i>
+            </div>
             <h4 class="precios">$230.000</h4>
             <h4 class="desc">20% off</h4>
-            <h3 class="desc">MacBook Pro 2019</h3>
+            <h3 class="nombre-producto">MacBook Pro 2019</h3>
+        </section>
         </article>
 
            <article>
             <img src="/images/img-samsung-galaxy-s10.jpg" width="100%" alt="imagen de Samsung Galaxy s10">
-
+               <section class="caja-descripcion">
+            <div class="circulo">
+                <i class="fa-solid fa-truck"></i>
+            </div>
             <h4 class="precios">$70.500</h4>
             <h4 class="desc">10% off</h4>
-            <h3 class="desc">Samsung Galaxy S10</h3>
+            <h3 class="nombre-producto">Samsung Galaxy S10</h3>
+        </section>
                 </article>
 
            <article>
             <img src="/images/img-tv-samsung-smart.jpg" width="100%" alt="imagen de smart tv">
-
+                <section class="caja-descripcion">
+            <div class="circulo">
+                <i class="fa-solid fa-truck"></i>
+            </div>
             <h4 class="precios">$23.200</h4>
               <h4 class="desc">5% off</h4> 
-              <h3 class="desc">SmarTv Samsung 43"</h3>  
-            
+              <h3 class="nombre-producto">SmarTv Samsung 43"</h3>  
+            </section>
            </article>
         </section>
 
@@ -105,32 +123,50 @@
             <h1 class="titulos">Sección de Ofertas</h1>
             <article>
                 <img src="/images/img-cafetera-moulinex.jpg" width="100%" alt="imagen de cafetera">
+                <section class="caja-descripcion">
+                <div class="circulo">
+                    <i class="fa-solid fa-truck"></i>
+                </div>
                 <h4 class="precios">$6.770</h4>
                 <h4 class="desc">40% OFF</h4>
-                <h3 class="desc">Cafetera Moulinex</h3>
+                <h3 class="nombre-producto">Cafetera Moulinex</h3>
+            </section>
             </article>
 
            <article>
             <img src="/images/img-macbook-pro-2019.jpg" width="100%" alt="imagen de MacBook">
+           <section class="caja-descripcion">
+            <div class="circulo">
+                <i class="fa-solid fa-truck"></i>
+            </div>
             <h4 class="precios">$230.000</h4>
             <h4 class="desc">20% off</h4>
-            <h3 class="desc">MacBook Pro 2019</h3>
+            <h3 class="nombre-producto">MacBook Pro 2019</h3>
+        </section>
                 </article>
 
            <article>
             <img src="/images/img-samsung-galaxy-s10.jpg" width="100%" alt="imagen de Samsung Galaxy s10">
-
+              <section class="caja-descripcion">
+            <div class="circulo">
+                <i class="fa-solid fa-truck"></i>
+            </div>
             <h4 class="precios">$70.500</h4>
             <h4 class="desc">10% off</h4>
-            <h3 class="desc">Samsung Galaxy S10</h3>
+            <h3 class="nombre-producto">Samsung Galaxy S10</h3>
+        </section>
            </article>
 
            <article>
             <img src="/images/img-tv-samsung-smart.jpg" width="100%" alt="imagen de smart tv">
-
+              <section class="caja-descripcion">
+            <div class="circulo">
+                <i class="fa-solid fa-truck"></i>
+            </div>
             <h4 class="precios">$23.200</h4>
               <h4 class="desc">5% off</h4> 
-              <h3 class="desc">SmarTv Samsung 43"</h3>  
+              <h3 class="nombre-producto">SmarTv Samsung 43"</h3>
+            </section>
            </article>
 
         </section>
