--- a/public/css/header.css
+++ b/public/css/header.css
@@ -2,24 +2,31 @@
     background-color: var(--color-amarillo);
     
 }
- 
-.segundonav{
-    padding-top: 18px;
-}
 
-.slogan{
+.main-navbar li{
+    display: none;
+   }
+
+.logo{
+    margin: 0 20px;
+    margin-top: 20px;
+    width: 150px;
+   }
+
+   .copy-header{
     padding-top: 10px;
   text-align: center;
   font-size: 13px;
   margin-bottom: 15px;
+  font-weight: normal;
+    margin-top: 8px;
 }
 
 .buscador{
-    
     margin-top: 15px;
     margin-left: 15px;
+    margin-top: 15px;
 }
-
 
 .lupa{
     display: inline;
@@ -38,7 +45,8 @@
     text-align: center;
     font-size: 25px;
     margin: auto;
-    margin-top: 16px;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 .caja-burger{
@@ -46,3 +54,4 @@
 }
 
 
+    
