--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,8 +3,83 @@
 @import url('/css/footer.css');
 @import url('/css/general.css');
 
+@media (min-width: 361px){
+    main{
+        text-align: center;
+    }
 
+    .main-navbar{
+        padding: 20px 20px
+    }
+    .logo{
+        width: 400px;
+    }
+    .buscador{
+        margin-left: 40px;
+    }
+    .copy-header{
+        margin: 20px;
+    }
+    .caja-burger{
+        display: none;
+    }
+    .banner{
+        height: 150px;
+    }
+    .titulos{
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+    main section article{
+        text-align: center;
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+    .nombre-producto{
+        display: block;
+        margin: 13px;
+        color: var(--color-grisoscuro);
+        font-size: 14px;
+    }
+}
 
+@media (min-width: 769px){
 
-
-
+    main{
+        text-align: center;
+    }
+    .main-navbar{
+        padding: 20px 20px
+    }
+    .logo{
+        width: 400px;
+    }
+    .buscador{
+        margin-left: 40px;
+    }
+    .copy-header{
+        margin: 20px;
+    }
+    .caja-burger{
+        display: none;
+    }
+    .banner{
+        height: 300px;
+    }
+    .titulos{
+        margin-top: 50px;
+        margin-bottom: 30px;
+    }
+    main section article{
+        text-align: center;
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+      
+    }
+    .nombre-producto{
+        display: block;
+        margin: 13px;
+        color: var(--color-grisoscuro);
+        font-size: 14px;
+    }
+    
+    }
+    
