--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,8 +1,8 @@
 main{
-text-align: center;
 width: 90%;
 margin: 0 15px;
 margin-bottom: 20px;
+
 }
 
 body{
@@ -11,7 +11,8 @@ body{
 
 .banner{
     margin-bottom: 10px;
-    height: 66px;
+    width: 100%;
+    height: 100px
 }
 
 .titulos{
@@ -26,50 +27,57 @@ body{
     font-size: 18px;
     padding: 5px;
     font-weight: normal;
-    text-align: left;
     margin-left: 9px ;
+    width: 30%;
 }
 
 
 .desc{
     font-size: 16px;
     padding-bottom: 8px;
-    margin-left: 13px;
     font-weight: normal;
     color: var(--color-verde);
     text-align: left;
+    margin-top: 6px;
+    width: 70%;
+    margin-left: 15%;
 }
-.fa-truck{
-    color: var(--color-verde);
-    padding-top: 5px;
-    padding-right: 5px;
-   }
-.circulo{
-    margin-top: 10px;
-    margin-left: 15px;
+.fa-truck.fa-solid{
+    color: #39b54a;
     display: block;
-    width: 40px;
-    height: 40px;
-    border: 1px solid var(--color-verde);
-    border-radius: 100%;
+    font-size: 16px;
+    border: 1px solid #39b54a;
+    background-color: #FFF;
+    border-radius: 50%;
+    position: absolute;
+    right: 4%;
+    top: 81%;
+    padding: 2%;
    }
+  
 
+.nombre-producto{
+    color: var(--color-grisoscuro);
+    font-size: 15px;
+    margin-left: 12px;
+    text-align: justify
+
+}
+.caja-descripcion{
+    display: flex;
+}
 main section article{
     background-color: white;
     margin-bottom: 10px;
+    display: flex;
+    position: relative;
+    flex-direction: column;
     
+}
+main section article img{
+    border-bottom: 2px solid var(--color-grisclaro);
 }
 
 
-
-.nombre-producto{
-    display: none;
-    text-align: left;
-   }
-
-   .caja-descripcion{
-    border: 2px var(--color-grisclaro) solid;
-    
-}
 
 
