--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,25 +3,52 @@
 @import url('/css/footer.css');
 @import url('/css/general.css');
 
+
+
+
 @media (min-width: 361px){
+    .main-header-top-bar{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    a{
+        font-size: 14px;
+    }
+    
     main{
-        text-align: center;
         margin: 0 auto;
     }
 
     .main-navbar{
-        padding: 20px 20px
+        display: flex;
+        justify-content: space-between
+    
+    }
+    .main-navbar ul{
+        display: flex;
+        gap: 10px;
+        
+    }
+    
+    .main-navbar li{
+        margin: 0 5px;
+        padding-top: 40px;
     }
     .logo{
-        width: 400px;
+        width: 200px;
     }
     .buscador{
         margin-left: 40px;
+        margin-top: 25px;
+        width: 30%;
     }
     .copy-header{
-        margin: 20px;
+        max-width: 350px;
+        text-align: right;
+        margin-top: 30px;
     }
-    .caja-burger{
+    .fas{
         display: none;
     }
     .banner{
@@ -34,35 +61,58 @@
     main section article{
         text-align: center;
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        width: 40%;
     }
+    main section{
+        display: flex;
+       flex-wrap: wrap;
+       justify-content: space-around;
+        
+    }
+    
+    .fa-truck.fa-solid{
+        position: absolute;
+        right: 6%;
+        top: 81%;
+        padding: 2%;
+       }
+ 
     .nombre-producto{
-        display: block;
-        margin: 13px;
-        color: var(--color-grisoscuro);
-        font-size: 14px;
+        display: initial;
+        font-size: 15px
     }
 }
 
 @media (min-width: 769px){
-
-    main{
-        text-align: center;
-    }
     .main-navbar{
-        padding: 20px 20px
+        margin-left: 15px;
+        margin-top: 25px;
+    }
+    .main-header-top-bar, .main-navbar{
+        max-width: 1200px;
+        margin: auto;
+    }
+
+    .main-navbar li{
+        margin: 0 10px;
+    }
+
+    .main-navbar a{
+        font-size: 15px;
     }
     .logo{
-        width: 400px;
+        width: 300px;
     }
     .buscador{
         margin-left: 40px;
     }
     .copy-header{
-        margin: 20px;
+        max-width: none;
+      font-size: 15px;
+      font-weight: 400px;
+      margin-top: 29px;
     }
-    .caja-burger{
-        display: none;
-    }
+    
     .banner{
         height: 300px;
     }
@@ -71,16 +121,32 @@
         margin-bottom: 30px;
     }
     main section article{
-        text-align: center;
+        
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        width: 20%;
       
     }
+    main section{
+        display: flex;
+       flex-wrap: wrap;
+       justify-content: space-around;
+        
+    }
     .nombre-producto{
-        display: block;
-        margin: 13px;
-        color: var(--color-grisoscuro);
-        font-size: 14px;
+       color: var(--color-grisoscuro);
+       font-size: 15px;
+    }
+    .fa-truck.fa-solid{
+        
+        position: absolute;
+        right: 6%;
+        top: 80%;
+        
+       }
     }
     
-    }
+
+    
+   
+
     
