--- a/views/home.html
+++ b/views/home.html
@@ -15,33 +15,33 @@
     <header class="main-header">
         <section class="main-header-top-bar">
             <img src="/images/logo-mercado-liebre.svg" width="100%" class="logo">
-
-        </section>
-            <section>
             <form action="" class="buscador">
-                <input type="text" placeholder="Buscar productos, marcas" id="search">
+                <input type="text" placeholder="Buscar productos" id="search">
                 <article class="lupa">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </article>
+           
             </form>
+
             <h2 class="copy-header">
                 <i class="fa-solid fa-hand-holding-dollar" style="color: #000000;"></i>
                Comprá  en cuotas y sin tarjeta de crédito
             </h2> 
 
-       
-        </section>
 
+        </section>
+            
+    
 
             <nav class="main-navbar">
-            <ul class="secciones">
+            <ul>
                 <li><a href="" class="link">Ofertas</a></li>
                 <li><a href="" class="link">Tiendas Oficiales</a></li>
                 <li><a href="" class="link">Vender</a></li>
                 <li><a href="" class="link">Ayuda</a></li>
             </ul>
 
-            <ul class="segundonav">
+            <ul>
                 <li><a href="" class="link">Creá tu cuenta</a> <i class="fa-sharp fa-regular fa-id-card" style="color: #000000;"></i></li>
                 <li><a href="" class="link">Ingresá</a> <i class="fa-sharp fa-solid fa-right-to-bracket" style="color: #000000;"></i></li>
                 <li><a href="" class="link">Mis compras</a> <i class="fa-solid fa-basket-shopping" style="color: #000000;"></i></li>
@@ -52,122 +52,111 @@
 
         </section>
 
-        <div class="caja-burger">
+        
            
             <a href="#" class="burger-menu"></a>
             <i class="fas fa-bars"> </i>
             
-        </div>
-
-        <section class="banner">
-            <img src="/images/img-home-banner.jpg" width="100%" alt="imagen banner">
-        </section>
-    
+        
     </header>
+    <section class="banner">
+        <img src="/images/img-home-banner.jpg" width="100%" alt="imagen banner">
+    </section>
+
  
     <main>
-
+        <h1 class="titulos">Basado en tu última vista</h1>
         <section>
-            <h1 class="titulos">Basado en tu última vista</h1>
+            
             <article>
+                <i class="fa-solid fa-truck"></i>
                 <img src="/images/img-cafetera-moulinex.jpg" width="100%" alt="imagen de cafetera">
-                <section class="caja-descripcion">
-                <div class="circulo">
-                    <i class="fa-solid fa-truck"></i>
-                </div>
-                
-                <h4 class="precios">$6.770</h4>
-                <h4 class="desc">40% OFF</h4>
-                <h3 class="nombre-producto">Cafetera Moulinex</h3>
-            </section>
+               
+                <div class="caja-descripcion">
+                <p class="precios">$6.770</p>
+                <p class="desc">40% OFF</p>
+            </div>
+                <p class="nombre-producto">Cafetera Moulinex</p>
+            
              </article>
             
            <article>
+            <i class="fa-solid fa-truck"></i>
             <img src="/images/img-macbook-pro-2019.jpg" width="100%" alt="imagen de MacBook">
-            <section class="caja-descripcion">
-            <div class="circulo">
-                <i class="fa-solid fa-truck"></i>
-            </div>
-            <h4 class="precios">$230.000</h4>
-            <h4 class="desc">20% off</h4>
-            <h3 class="nombre-producto">MacBook Pro 2019</h3>
-        </section>
+<div class="caja-descripcion">
+            <p class="precios">$230.000</p>
+            <p class="desc">20% off</p>
+        </div>
+            <p class="nombre-producto">MacBook Pro 2019</p>
+      
         </article>
 
            <article>
+            <i class="fa-solid fa-truck"></i>
             <img src="/images/img-samsung-galaxy-s10.jpg" width="100%" alt="imagen de Samsung Galaxy s10">
-               <section class="caja-descripcion">
-            <div class="circulo">
-                <i class="fa-solid fa-truck"></i>
-            </div>
-            <h4 class="precios">$70.500</h4>
-            <h4 class="desc">10% off</h4>
-            <h3 class="nombre-producto">Samsung Galaxy S10</h3>
-        </section>
+            <div class="caja-descripcion">
+            <p class="precios">$70.500</p>
+            <p class="desc">10% off</p>
+        </div>
+            <p class="nombre-producto">Samsung Galaxy S10</p>
                 </article>
 
            <article>
+            <i class="fa-solid fa-truck"></i>
             <img src="/images/img-tv-samsung-smart.jpg" width="100%" alt="imagen de smart tv">
-                <section class="caja-descripcion">
-            <div class="circulo">
-                <i class="fa-solid fa-truck"></i>
+                <div class="caja-descripcion">
+            <p class="precios">$23.200</p>
+              <p class="desc">5% off</p> 
             </div>
-            <h4 class="precios">$23.200</h4>
-              <h4 class="desc">5% off</h4> 
-              <h3 class="nombre-producto">SmarTv Samsung 43"</h3>  
-            </section>
+              <p class="nombre-producto">SmarTv Samsung 43"</p>  
+           
            </article>
-        </section>
+    </section>
 
+   
+        <h1 class="titulos">Sección de Ofertas</h1>
         <section>
-            <h1 class="titulos">Sección de Ofertas</h1>
             <article>
+                <i class="fa-solid fa-truck"></i>
                 <img src="/images/img-cafetera-moulinex.jpg" width="100%" alt="imagen de cafetera">
-                <section class="caja-descripcion">
-                <div class="circulo">
-                    <i class="fa-solid fa-truck"></i>
-                </div>
-                <h4 class="precios">$6.770</h4>
-                <h4 class="desc">40% OFF</h4>
-                <h3 class="nombre-producto">Cafetera Moulinex</h3>
-            </section>
+            <div class="caja-descripcion">
+                <p class="precios">$6.770</p>
+                <p class="desc">40% OFF</p>
+            </div>
+                <p class="nombre-producto">Cafetera Moulinex</p>
             </article>
 
            <article>
+            <i class="fa-solid fa-truck"></i>
             <img src="/images/img-macbook-pro-2019.jpg" width="100%" alt="imagen de MacBook">
-           <section class="caja-descripcion">
-            <div class="circulo">
-                <i class="fa-solid fa-truck"></i>
-            </div>
-            <h4 class="precios">$230.000</h4>
-            <h4 class="desc">20% off</h4>
-            <h3 class="nombre-producto">MacBook Pro 2019</h3>
-        </section>
+  <div class="caja-descripcion">
+            <p class="precios">$230.000</p>
+            <p class="desc">20% off</p>
+        </div>
+            <p class="nombre-producto">MacBook Pro 2019</p>
+ 
                 </article>
 
            <article>
+            <i class="fa-solid fa-truck"></i>
             <img src="/images/img-samsung-galaxy-s10.jpg" width="100%" alt="imagen de Samsung Galaxy s10">
-              <section class="caja-descripcion">
-            <div class="circulo">
-                <i class="fa-solid fa-truck"></i>
-            </div>
-            <h4 class="precios">$70.500</h4>
-            <h4 class="desc">10% off</h4>
-            <h3 class="nombre-producto">Samsung Galaxy S10</h3>
-        </section>
+<div class="caja-descripcion">
+            <p class="precios">$70.500</p>
+            <p class="desc">10% off</p>
+        </div>
+            <p class="nombre-producto">Samsung Galaxy S10</p>
+
            </article>
 
            <article>
+            <i class="fa-solid fa-truck"></i>
             <img src="/images/img-tv-samsung-smart.jpg" width="100%" alt="imagen de smart tv">
-              <section class="caja-descripcion">
-            <div class="circulo">
-                <i class="fa-solid fa-truck"></i>
+<div class="caja-descripcion">
+            <p class="precios">$23.200</p>
+              <p class="desc">5% off</p> 
             </div>
-            <h4 class="precios">$23.200</h4>
-              <h4 class="desc">5% off</h4> 
-              <h3 class="nombre-producto">SmarTv Samsung 43"</h3>
-            </section>
-           </article>
+              <p class="nombre-producto">SmarTv Samsung 43"</p>
+
 
         </section>
     </main>
@@ -189,9 +178,8 @@
         <h4 class="footer_descripciones">Solo por estar registrad@ en Mercado Liebre <br> Tenés envíos gratis en miles de productos. Es <br> un beneficio de Mercado Puntos.</h4>
     
     </section>
-    <div class="caja">
+   
 
-    </div>
     <section class="secciones_footer">
    <article>
             <i class="fa-solid fa-user-shield fa-2em"></i>
