--- a/views/home.html
+++ b/views/home.html
@@ -16,7 +16,7 @@
         <section class="main-header-top-bar">
             <img src="/images/logo-mercado-liebre.svg" width="100%" class="logo">
             <form action="" class="buscador">
-                <input type="text" placeholder="Buscar productos" id="search">
+                <input type="text" placeholder="Buscar productos" id="search" >
                 <article class="lupa">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </article>
@@ -42,8 +42,8 @@
             </ul>
 
             <ul>
-                <li><a href="" class="link">Creá tu cuenta</a> <i class="fa-sharp fa-regular fa-id-card" style="color: #000000;"></i></li>
-                <li><a href="" class="link">Ingresá</a> <i class="fa-sharp fa-solid fa-right-to-bracket" style="color: #000000;"></i></li>
+                <li><a href="/register" class="link">Creá tu cuenta</a> <i class="fa-sharp fa-regular fa-id-card" style="color: #000000;"></i></li>
+                <li><a href="/login" class="link">Ingresá</a> <i class="fa-sharp fa-solid fa-right-to-bracket" style="color: #000000;"></i></li>
                 <li><a href="" class="link">Mis compras</a> <i class="fa-solid fa-basket-shopping" style="color: #000000;"></i></li>
             </ul>
     
