--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,9 +61,21 @@
     }
     main section article{
         text-align: center;
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
         width: 40%;
     }
+    main section article:hover{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+    main section article:hover .fa-truck.fa-solid{
+        transition-duration: 5s;
+            transform: rotate(267deg);
+       
+     }
+     main section article:hover .nombre-producto{
+        transition-duration: 1s;
+        opacity: 100%;;
+     }
+
     main section{
         display: flex;
        flex-wrap: wrap;
@@ -77,11 +89,11 @@
         top: 81%;
         padding: 2%;
        }
+
  
     .nombre-producto{
         display: initial;
         font-size: 15px;
-        margin-left: 40px;
     }
     .formulario-login{
         display: flex;
@@ -157,6 +169,7 @@
         margin-top: 7%;
         margin-bottom: 8%;
     }
+
 }
 
 
@@ -199,10 +212,21 @@
         margin-bottom: 30px;
     }
     main section article{
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
         width: 20%;
       
     }
+    main section article:hover{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+    main section article:hover .fa-truck.fa-solid{
+        transition-duration: 5s;
+            transform: rotate(267deg);
+       
+     }
+     main section article:hover .nombre-producto{
+        transition-duration: 1s;
+        opacity: 100%;;
+     }
     main section{
         display: flex;
        flex-wrap: wrap;
@@ -219,6 +243,9 @@
         right: 6%;
         top: 80%;
         
+       }
+       .fa-solid:hover{
+        transform: rotate(1turn);
        }
        .input-usuario{
         width: 50%;
@@ -266,6 +293,20 @@
         margin-left: 33%;
         margin-top: 3%;
         margin-bottom: 4%;
+    }
+    .secciones_footer {
+        display: flex;
+        justify-content: space-around;
+    }
+     .fa-credit-card:hover{
+        color:  #0cf80c
+
+    }
+    .fa-gift:hover{
+        color:  #0cf80c
+    }
+    .fa-user-shield:hover{
+        color: #0cf80c
     }
     }
     
