--- a/views/home.html
+++ b/views/home.html
@@ -165,31 +165,32 @@
         <section class="secciones_footer">
             <article>
             <i  class="fa-solid fa-credit-card fa-2em"></i>
-        </article>
+        
 
      <h3 class="footer_titulos">Pagá con tarjeta o en efectivo</h3>
      <h4 class="footer_descripciones">Con Mercado Liebre Cash, tenés cuotas sin <br> interés con tarjeta o efectivo en puntos de <br> pago. ¡Y siempre es seguro!</h4>
-    </section>
-    <section class="secciones_footer">
+    </article>
+    
     <article>
             <i class="fa-solid fa-gift fa-2em"></i>
-        </article>
+       
         <h3 class="footer_titulos">Envíos gratis desde los $2.500</h3>
         <h4 class="footer_descripciones">Solo por estar registrad@ en Mercado Liebre <br> Tenés envíos gratis en miles de productos. Es <br> un beneficio de Mercado Puntos.</h4>
-    
-    </section>
+    </article>
+  
    
 
-    <section class="secciones_footer">
+    
    <article>
             <i class="fa-solid fa-user-shield fa-2em"></i>
-        </article>
+        
         <h3 class="footer_titulos">Seguridad de principio a fin</h3>
         <h4 class="footer_descripciones">¿No te gusta? ¡Devolvelo! En MercadoLiebre <br> no hay nada que no puedas hacer por que estás <br> siempre protegid@</h4>
+    </article>
     </section>
-    <section>
+    <article>
         <h4 class="footer_copy">Copyrigth © 1999-2020 MercadoLiebre S.R.L</h4>
-    </section>
+    </article>
     </footer>
 
     
